@@ -1,6 +1,7 @@
 2.13.3
  - fix: casting error when using integer feature for plot color
- - setup: bump dclab from 0.48.4 to 0.49.0
+ - fix: also export logs and tables to .rtdc with prefix "so2exp_"
+ - setup: bump dclab from 0.48.4 to 0.50.1
 2.13.2
  - docs: don't build PDF on rtd (failed)
  - setup: bump dclab from 0.48.2 to 0.48.4 (don't load invalid
